Refactor Mission and MJTSpaceScanner